--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,6 +17,11 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIBfNAk_YO6MsSe2mu2JAg-Voc6bDbItU&libraries=geometry,drawing,places"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <div id="target"></div>
