--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,18 +17,19 @@
     />
     <!-- Google Maps API -->
 
-
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIBfNAk_YO6MsSe2mu2JAg-Voc6bDbItU&libraries=geometry,drawing,places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGScN3dzq3j5Pxfzi2EIF5-mnCatkqOE4&libraries=geometry,drawing,places"
       async
       defer
     ></script>
