--- a/front/public/index.html
+++ b/front/public/index.html
@@ -18,8 +18,6 @@
     <!-- Google Maps API -->
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
     <!-- Font -->
     <link
@@ -29,7 +27,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGScN3dzq3j5Pxfzi2EIF5-mnCatkqOE4&libraries=geometry,drawing,places"
+      src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing,places"
       async
       defer
     ></script>
