--- a/front/public/index.html
+++ b/front/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MicroShopping</title>
+    <title>ReserVAMOS</title>
 
     <!-- Bootstrap -->
     <link
@@ -16,14 +16,21 @@
       href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
     />
     <!-- Google Maps API -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing,places"
+      async
+      defer
+    ></script>
 
     <!-- Favicon -->
 
-    <!-- Font -->
+    <!-- Font
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
-    />
+    /> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
