--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,7 +17,7 @@
     />
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing,places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxuz7I_RIBLNfgYVdi1BsBw6b_TsBk0_s&libraries=geometry,drawing,places"
       async
       defer
     ></script>
@@ -30,7 +30,10 @@
       rel="stylesheet"
     /> -->
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
+      rel="stylesheet"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
