--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,7 +17,7 @@
     />
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxuz7I_RIBLNfgYVdi1BsBw6b_TsBk0_s&libraries=geometry,drawing,places"
+      src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing,places"
       async
       defer
     ></script>
