--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,7 +17,7 @@
     />
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing,places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKUxGQ7i8hmgDjcStvDi2sgoC_BJUmXK4&libraries=geometry,drawing,places"
       async
       defer
     ></script>
