--- a/front/public/index.html
+++ b/front/public/index.html
@@ -17,7 +17,7 @@
     />
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKUxGQ7i8hmgDjcStvDi2sgoC_BJUmXK4&libraries=geometry,drawing,places"
+      src="https://maps.googleapis.com/maps/api/js?key=&libraries=geometry,drawing,places"
       async
       defer
     ></script>
@@ -34,6 +34,8 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
       rel="stylesheet"
     />
+
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
